# SBEPIS

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  Logo Blurb.blend  sbepis.blend
.github/workflows/: weekly-build.yml
bevy-pretty-nice-input/: Cargo.toml
bevy-pretty-nice-input-derive/: Cargo.toml
bevy-pretty-nice-input-derive/src/: input_transition.rs  lib.rs
bevy-pretty-nice-input/src/: bundles.rs  lib.rs
bevy-pretty-nice-menus/: Cargo.toml
bevy-pretty-nice-menus/src/: lib.rs
jack-noir/: Cargo.toml
jack-noir/src/: main.rs
jack_noir/: Cargo.toml
jack_noir/src/: main.rs
sbepis/: Cargo.toml  build.rs
sbepis/art/: assets.blend  box.blend  button.blend  command station.blend  jump gym.blend  player.blend  post processing testing.blend  rock.blend
sbepis/assets/: command station.glb  consort village.glb  consort.glb  developers.developers.ron  imp arena.glb  imp.glb  jump gym.glb  lod_chunks.frag.wgsl  lod_chunks.vert.wgsl  noise.wgsl  player.glb  post_processing.wgsl  post_processing_outlines.wgsl  post_processing_quantize.wgsl  post_processing_quantize_post.wgsl  sample desert.wgsl  sample.wgsl  sandbox level.glb  supporters.supporters.ron  vriska face.psd
sbepis/assets/blueprints/: Button.glb  Cube.glb  House.glb  rock.glb
sbepis/assets/fonts/: LICENSE
sbepis/assets/levels/: World.glb  World.meta.ron
sbepis/assets/materials/: Building.glb  Button Bottom.glb  Button Top.glb  Cube.glb  Door.glb  Material.glb  Planet.glb  Roof.glb
sbepis/assets/unlicensed/: README.md
sbepis/src/: blenvy.rs  camera.rs  dialogue.rs  framerate.rs  gravity.rs  input.rs  main.rs  main_bundles.rs  main_menu.rs  menus.rs  overview_camera.rs  post_processing.rs  skybox.rs  test.rs  util.rs  worldgen.rs  worlds.rs
sbepis/src/commands/: mod.rs  note_holder.rs  notes.rs  sequences.rs  staff.rs
sbepis/src/entity/: health.rs  mod.rs  movement.rs  orientation.rs  spawner.rs
sbepis/src/fray/: mod.rs  tracks.rs
sbepis/src/inventory/: mod.rs  screen.rs
sbepis/src/npcs/: consort.rs  imp.rs  mod.rs  name_tags.rs
sbepis/src/player/: interaction.rs  mod.rs  movement_indicators.rs  stamina.rs
sbepis/src/player/camera/: controls.rs  fov.rs  mod.rs  node.rs  third_person.rs
sbepis/src/player/movement/: charge.rs  crouch.rs  dash.rs  grounded.rs  jump.rs  mod.rs  roll.rs  slide.rs  stand.rs  trip.rs  walk.rs
sbepis/src/player/weapons/: hammer.rs  mod.rs  rifle.rs  sword.rs
sbepis/src/player_commands/: commands.rs  mod.rs  note_holder.rs  notes.rs  staff.rs
sbepis/src/player_controller/: camera_controls.rs  mod.rs  movement.rs  movement_indicators.rs  speed_indicator.rs  stamina.rs
sbepis/src/player_controller/movement/: charge.rs  crouch.rs  dash.rs  di.rs  grounded.rs  jump.rs  mod.rs  roll.rs  slide.rs  sneak.rs  sprint.rs  stand.rs  trip.rs  walk.rs
sbepis/src/player_controller/weapons/: hammer.rs  mod.rs  rifle.rs  sword.rs
sbepis/src/post_processing/: mod.rs  outlines.rs  quantize.rs
sbepis/src/questing/: mod.rs  proposal.rs  quest_markers.rs  screen.rs
sbepis/src/worldgen/: desert.rs  low_lod.rs  mod.rs  terrain.rs
state_machine/: Cargo.toml
state_machine/src/: main.rs
