[workspace]
members = [
	"sbepis",
	"jack-noir",
	"state-machine",
	"bevy-marching-cubes",
	"bevy-pretty-nice-input",
	"bevy-pretty-nice-input-derive",
	"bevy-pretty-nice-menus",
]
default-members = ["sbepis"]
resolver = "2"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
