[package]
name = "sbepis"
version = "0.1.0"
edition = "2024"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
eq_op = "allow"

[features]
debug = [
	"inspector",
	"overview_camera",
	"terminal",
	"movement_indicators",
	"framerate_indicator",
	# "skip_main_menu",
	# "debug_movement_graph",
]
default = []
inspector = [
	"dep:bevy-inspector-egui",
	"bevy_panorbit_camera?/bevy_egui",
	"overview_camera",                 # otherwise you can't interact with the inspector...
]
metronome = []
overview_camera = ["dep:bevy_panorbit_camera"]
terminal = []
rapier_debug = []
movement_indicators = []
framerate_indicator = []
skip_main_menu = []
debug_movement_graph = ["bevy_pretty_nice_input/debug_graph"]

[dependencies]
bevy = { version = "0.17", features = ["wav", "mp3"] }
bevy-inspector-egui = { version = "0.34", optional = true, default-features = false, features = [
	"bevy_pbr",
	"bevy_image",
	"bevy_render",
	"bevy_core_pipeline",
	"egui_clipboard",
] }
bevy_panorbit_camera = { version = "0.29", optional = true }
bevy_rapier3d = { git = "https://github.com/lukasfri/bevy_rapier.git" }
image = "0.25.2"
itertools = "0.14.0"
num-traits = "0.2.19"
winit = "0.30"
rand = "0.9"
uuid = "1.16.0"
serde = "1.0.215"
bevy_common_assets = { version = "0.14.0", features = ["ron"] }
meshtext = "0.3.1"
soundyrust = { path = "../soundyrust" }
bevy_hanabi = "0.17"
typetag = "0.2.19"
return-ok = "0.1"
bevy_skein = "0.3.0"
bevy-marching-cubes = { path = "../bevy-marching-cubes" }
crossbeam-channel = "0.5.15"
fake = "4.4.0"
bevy_pretty_nice_input = { version = "0.2.0" }
bevy_pretty_nice_menus = { version = "0.2.0", features = ["pretty_nice_input"] }
paste = "1.0.15"
bevy_auto_plugin = { git = "https://github.com/jwright159/bevy_auto_plugin.git", branch = "auto-sub-states" }

[build-dependencies]
winres = "0.1"
