[package]
name = "sbepis"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["mp3", "wav"] }
bevy_auto_plugin = "0.10"
bevy_common_assets = { version = "0.15", features = ["ron"] }
bevy_cube_marcher = "0.4"
bevy_hanabi = "0.18"
bevy-inspector-egui = { version = "0.36", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_pbr",
  "bevy_render",
  "egui_clipboard",
], optional = true }
bevy_panorbit_camera = { version = "0.34", optional = true }
bevy_pretty_nice_input = { version = "0.6" }
bevy_pretty_nice_menus = { version = "0.5", features = ["pretty_nice_input"] }
bevy_rapier3d = { git = "https://github.com/Buncys/bevy_rapier.git", branch = "bevy-0.18.0" }
bevy_skein = "0.5"
crossbeam-channel = "0.5.15"
fake = "4.4.0"
image = "0.25.2"
itertools = "0.14.0"
meshtext = "0.3.1"
num-traits = "0.2.19"
paste = "1.0.15"
rand = "0.9"
return-ok = "0.1"
serde = "1.0.215"
soundyrust = { path = "../soundyrust" }
typetag = "0.2.19"
uuid = "1.16.0"
winit = "0.30"

[build-dependencies]
winres = "0.1"

[features]
default = []
debug = [
  # "skip_main_menu",
  # "debug_movement_graph",
  "bevy/track_location",
  "framerate_indicator",
  "inspector",
  "movement_indicators",
  "overview_camera",
  "terminal",
]
debug_movement_graph = ["bevy_pretty_nice_input/debug_graph"]
framerate_indicator = []
inspector = [
  "dep:bevy-inspector-egui",  # otherwise you can't interact with the inspector...
  "overview_camera",
]
metronome = []
movement_indicators = []
overview_camera = ["dep:bevy_panorbit_camera"]
rapier_debug = []
skip_main_menu = []
terminal = []
tracy = ["bevy/trace_tracy", "framerate_indicator"]

[lints.clippy]
eq_op = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
